--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,6 @@
         android:layout_marginBottom="10dp"
         tools:ignore="MissingConstraints" />
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewAlbums"
         android:layout_width="match_parent"
@@ -27,6 +26,17 @@
         android:layout_marginTop="50dp"
         android:scrollbars="vertical"
         app:layout_constraintStart_toStartOf="@string/albumestitle"
-        tools:layout_editor_absoluteX="53dp" />
+        tools:layout_editor_absoluteX="53dp"
+        android:layout_marginBottom="40dp"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/menu">
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
