--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Vinyls" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Vinyls" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -17,4 +17,13 @@
     <style name="CornerCut">
         <item name="cornerSize">10%</item>
     </style>
+
+    <style name="Theme.Vinyls.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Vinyls.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Vinyls.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
