--- a/app/src/main/res/layout/activity_album_detail.xml
+++ b/app/src/main/res/layout/activity_album_detail.xml
@@ -94,6 +94,7 @@
 
 
     <LinearLayout
+        android:id="@+id/layout3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -129,7 +130,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/layout3"
+        android:id="@+id/layout4"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -164,44 +165,49 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
+    <TextView
+        android:id="@+id/lblDescription"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="205dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/layout3"
-        app:layout_constraintTop_toTopOf="@+id/layout3"
-        >
+        android:text="Descripción: "
+        android:textAlignment="textStart"
+        android:textColor="#888888"
+        android:layout_marginLeft="10dp"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/layout4"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Descripción: "
-            android:textAlignment="textStart"
-            android:textColor="#888888"
-            android:layout_marginLeft="10dp"
-            android:textSize="15sp"
-            android:textStyle="bold"
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="fill_parent"
+        android:layout_marginRight="10dp"
+        android:layout_height="wrap_content"
+        android:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa "
+        android:textAlignment="textStart"
+        android:textColor="#888888"
+        android:layout_marginLeft="10dp"
+        android:textSize="15sp"
+        android:background="@drawable/corners_ddddd"
+        app:layout_constraintTop_toBottomOf="@+id/lblDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        android:padding="15dp"
 
-            />
+        />
 
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="fill_parent"
-            android:layout_marginRight="10dp"
-            android:layout_height="wrap_content"
-            android:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa "
-            android:textAlignment="textStart"
-            android:textColor="#888888"
-            android:layout_marginLeft="10dp"
-            android:textSize="15sp"
-            android:background="#DDDDDD"
-            />
-
-    </LinearLayout>
-
-
+    <Button
+        android:id="@+id/buttonSong"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ver Canciones"
+        app:layout_constraintTop_toBottomOf="@+id/description"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/corners"
+        />
 
 
 
