--- a/app/src/main/res/layout/activity_tracks.xml
+++ b/app/src/main/res/layout/activity_tracks.xml
@@ -10,27 +10,26 @@
 
     <TextView
         android:id="@+id/title"
-        android:text="Canciones"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:text="Canciones"
+        android:textColor="#555555"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="#555555"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerViewSongs"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
+        android:paddingBottom="40dp"
         android:scrollbars="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintStart_toStartOf="parent"
-        android:paddingBottom="40dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <Button
         android:id="@+id/buttonAddTrack"
