Se realiza ajuste a incidencias reportadas por Lint para mejorar la accesibilidad de la APP

--- a/app/src/main/res/layout/activity_album_create.xml
+++ b/app/src/main/res/layout/activity_album_create.xml
@@ -25,7 +25,7 @@
         android:id="@+id/lblName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Título"
+        android:text="@string/t_tulo"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
@@ -45,13 +45,14 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/corners"
+        android:hint="@+id/edtiTextName"
          />
 
     <TextView
         android:id="@+id/lblDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Fecha"
+        android:text="@string/fecha"
         app:layout_constraintTop_toBottomOf="@+id/edtiTextName"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
@@ -77,7 +78,7 @@
         android:id="@+id/lblCover"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cover - URL Imagen"
+        android:text="@string/cover_url_imagen"
         app:layout_constraintTop_toBottomOf="@+id/editTextDate"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
@@ -155,7 +156,7 @@
         android:id="@+id/lblDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Descripción"
+        android:text="@string/descripci_n"
         app:layout_constraintTop_toBottomOf="@+id/editTextRecordLabel"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
