--- a/app/src/main/res/layout/activity_track_create.xml
+++ b/app/src/main/res/layout/activity_track_create.xml
@@ -26,7 +26,7 @@
         android:id="@+id/lblName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nombre"
+        android:text="@string/nombre"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
