Se validan etiquetas para el TalkBack y se agregan algunos textos faltantes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="60dp"
         android:layout_marginEnd="10dp"
-        android:contentDescription="Imagen de albumes"
+        android:contentDescription="Crear un album"
         android:focusable="true" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
