--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -7,7 +7,7 @@
     tools:context=".view.CollectionActivity">
 
     <TextView
-        android:text="@string/colecciones"
+        android:text="@string/coleccionistas"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:textSize="30sp"
