--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:text="@string/albumestitle"
         android:textColor="#555555"
         android:textSize="30sp"
+        android:layout_marginLeft="15dp"
         android:textStyle="bold"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="20dp"
