BUG :: HU06 Detalle Coleccionista al mostrar albumes

--- a/app/src/main/res/layout/card_album_item_collector.xml
+++ b/app/src/main/res/layout/card_album_item_collector.xml
@@ -13,10 +13,8 @@
         android:layout_height="130dp"
         app:cardCornerRadius="14dp"
         app:cardElevation="3dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:cardPreventCornerOverlap="true"
         android:layout_marginBottom="4dp">
 
@@ -96,7 +94,7 @@
                             android:textSize="10sp"
                             android:textColor="#555555"
                             android:layout_marginLeft="10dp"
-                            android:id="@+id/description"
+                            android:id="@+id/descriptionViewAlbum"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             />
