--- a/app/src/main/res/layout/activity_collector_detail.xml
+++ b/app/src/main/res/layout/activity_collector_detail.xml
@@ -115,6 +115,18 @@
         tools:layout_editor_absoluteX="53dp"
         android:layout_marginBottom="40dp"/>
 
+    <RelativeLayout
+        android:id="@+id/loadingPanel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center" >
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+    </RelativeLayout>
+
     <Button
         android:id="@+id/buttonBack"
         android:layout_width="match_parent"
